Fix figure layout on firefox

--- a/_precompiled/scss/_layout.scss
+++ b/_precompiled/scss/_layout.scss
@@ -83,10 +83,10 @@
 
   .testimonials {
     blockquote {
-      @include span-columns(10);
+      @include span-columns(10 of 12);
     }
     figure {
-      @include span-columns(2);
+      @include span-columns(2 of 12);
       @include omega();
     }
   }
